ray nambah profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,29 +1,5 @@
-/* 
-    COLOR GUIDE
-    
-    YELLOW!
-    #FFFF64
-    #FFF000
-    #9B9B00
-
-    GREEN!
-    #C1F25F
-    #9FEE00
-    #619100
-
-    ORANGE!
-    #FFE464
-    #FFD300
-    #9B8100
-*/
-
-/* element selector */
-
-
-
 p {
     text-align: justify;
-    `
 }
 
 a:link {
@@ -55,27 +31,39 @@ a.carousel-link{
 }
 
 section.article{
-    /* margin-bottom: 3rem; */
-    /* padding: 7rem 7rem 3rem 7rem; */
     border: 0.1px solid #022c43;
     border-radius: 10px;
     
 }
 
-img.img-blog{
-    max-width: 450px;
+li{
+    cursor: pointer;
+    list-style: none;
 }
 
-img.img-gallery{
+.img-blog{
+    max-width: 450px;
+    max-height: 296px;
+    object-fit: cover;
+}
+
+.img-gallery{
     transition: all .2s ease-in-out; 
 }
 
-img.img-gallery:hover{
-    transform: scale(1.1);
+.img-gallery:hover{
+    transform: scale(1.2);
+}
+
+.soon{
+    font-size: 5rem;
+    text-transform: none;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
 }
 
 .row:hover img.img-gallery{
-    opacity: .5;
+    opacity: .2;
 }
 
 .row img.img-gallery:hover{
@@ -93,20 +81,6 @@ img.img-gallery:hover{
     text-transform: uppercase;
 }
 
-.zone {
-    padding: 30px 50px;
-    cursor: pointer;
-    font-size: 2em;
-    border: 3px solid grey;
-    transition: all 0.3s linear;
-}
-
-.zone:hover {
-    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-}
 
 .center {
     display: flex;
@@ -127,7 +101,7 @@ img.img-gallery:hover{
     background-color: rgba(0,0,0, 0.75);
 }
 
-.parallax {
+.parallax-research {
     /* The image used */
     background-image: url('../images/research/cover.jpeg');
   
@@ -143,7 +117,7 @@ img.img-gallery:hover{
     background-size: cover;
   }
   
-  .parallax h1{
+  .parallax-research h1{
       color: white;
     position: absolute;               /* 2 */
     top: 50%;                         /* 3 */
@@ -153,6 +127,13 @@ img.img-gallery:hover{
     background-color: rgba(0,0,0, 0.75);
    }   /* 4 */
   
+   .construction{
+       background-image: url('../images/construction/bg.jpeg');
+       background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    min-height: 89vh;
+   }
   /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
   @media only screen and (max-device-width: 1366px) {
     .parallax {
@@ -160,4 +141,7 @@ img.img-gallery:hover{
     }
   }
 
+  .ul-profile{
+    border-right: 6px solid #053f5e;
+  }
 /* id selector */
