--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,69 +4,74 @@ p {
 
 a:link {
     color: #000000;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: #000000;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: #053f5e;
-  }
-  
-  /* selected link */
-  a:active {
-      color: #115173;
-    }
-    
-img{
-    width:100%;
-    height:auto;
 }
 
-a.carousel-link{
+/* visited link */
+a:visited {
+    color: #000000;
+}
+
+/* mouse over link */
+a:hover {
+    color: #053f5e;
+}
+
+/* selected link */
+a:active {
+    color: #115173;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+a.carousel-link {
     color: #fff;
 }
 
-section.article{
+section.article {
     border: 0.1px solid #022c43;
     border-radius: 10px;
-    
+
 }
 
-li{
-    cursor: pointer;
+li {
     list-style: none;
 }
 
-.img-blog{
+.img-blog {
     max-width: 450px;
     max-height: 296px;
     object-fit: cover;
 }
 
-.img-gallery{
-    transition: all .2s ease-in-out; 
+.img-gallery {
+    transition: all .2s ease-in-out;
 }
 
-.img-gallery:hover{
+.img-gallery:hover {
     transform: scale(1.2);
 }
 
-.soon{
+.img-profile {
+    width: 512px;
+    height: 320px;
+    object-fit: cover;
+}
+
+.soon {
     font-size: 5rem;
     text-transform: none;
     color: #ffffff;
     border-bottom: 1px solid #ffffff;
 }
 
-.row:hover img.img-gallery{
+.row:hover img.img-gallery {
     opacity: .2;
 }
 
-.row img.img-gallery:hover{
+.row img.img-gallery:hover {
     opacity: 1;
 }
 
@@ -94,19 +99,19 @@ li{
 }
 
 /*.carousel{*/
-    /*z-index: -10000;*/
+/*z-index: -10000;*/
 /*}*/
 
-.carousel-caption{
-    background-color: rgba(0,0,0, 0.75);
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .parallax-research {
     /* The image used */
     background-image: url('../images/research/cover.jpeg');
-  
+
     /* Full height */
-    height: 100%; 
+    height: 100%;
     min-height: 720px;
 
     position: relative;
@@ -115,33 +120,43 @@ li{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
-  
-  .parallax-research h1{
-      color: white;
-    position: absolute;               /* 2 */
-    top: 50%;                         /* 3 */
+}
+
+.parallax-research h1 {
+    color: white;
+    position: absolute;
+    /* 2 */
+    top: 50%;
+    /* 3 */
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    background-color: rgba( );
-   }   /* 4 */
-  
-   .construction{
-       background-image: url('../images/construction/bg.jpeg');
-       background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    min-height: 89vh;
-   }
-  /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-  @media only screen and (max-device-width: 1366px) {
-    .parallax {
-      background-attachment: scroll;
-    }
-  }
+    background-color: rgba();
+}
 
-  .ul-profile{
+/* 4 */
+
+.construction {
+    background-image: url('../images/construction/bg.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 89vh;
+}
+
+/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
+
+.ul-profile {
     border-right: 6px solid #053f5e;
-  }
+}
+
+.li-profile {
+    cursor: pointer;
+}
+
 /* id selector */
