--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,18 +28,18 @@ body, html {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0, 0.75);
+    background-color: rgba(0,0,0, 0.45);
 }
-.content-1{
+.summary{
     height:500px;
     background-color:white;
     font-size:36px;
 }
 
-.content-1 > div{
+.summary > div{
     padding-top: 100px;
     text-align: center;
- font-weight: bolder;
+    font-weight: bolder;
 }
 
 .z-index{
@@ -50,5 +50,77 @@ body, html {
     font-size: 60px;
 }
 .home-transparent{
-    background-color: rgba(255,0,0,0.1);
+    max-height: 40%;
+}
+
+#container-1 > p{
+    font-size: small;
+    font-weight: lighter;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    margin-top: 30px;
+    padding-top:10px;
+    line-height:2;
+    text-transform: none;
+    max-width: 50%;
+    margin-right:auto;
+    margin-left: auto;"
+}
+
+.whoweare{
+    height:550px;
+    background-color:white;
+
+
+}
+
+.whoweare > div {
+   padding-top: 130px;
+}
+
+#container-2 > h1 {
+    text-transform: none;
+    font-weight: bolder;
+}
+
+#container-2 > p{
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 40px;
+}
+
+.responsive {
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+
+.whatwedo{
+    height:550px;
+    background-color:#F4F7FC;
+
+
+}
+
+.whatwedo > div {
+    padding-top: 130px;
+}
+
+.whatwethink{
+    height: 550px;
+    background-color: #FFFFFF;
+}
+
+.whatwethink > div {
+    padding-top: 130px;
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+.newsletter{
+    padding-top: 50px;
 }
