--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,8 @@ li {
 }
 
 .img-profile {
-    width: 512px;
-    height: 320px;
+    max-width: 200px;
+    /* height: 320px; */
     object-fit: cover;
 }
 
