revisi ray asirn kren

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -9,6 +9,7 @@ body {
     font-family: "Futura";
     src: url("../ttf/futura.ttf");
 }
+
 @font-face {
     font-family: "Avenir";
     src: url("../ttf/AvenirLTStd-LightOblique.ttf");
@@ -18,8 +19,13 @@ body {
     font-family: "Futura";
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
