--- a/public/css/headerFooter.css
+++ b/public/css/headerFooter.css
@@ -1,8 +1,5 @@
-
-
-
 .navbar {
-    min-height: 110px;
+    height: 8vh;
     background-color: #FFFFFF !important;
 }
 
@@ -12,9 +9,9 @@
     line-height: 80px;
 }
 
-.navbar-nav > li{
-    margin-left:5px;
-    margin-right:5px;
+.navbar-nav>li {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .navbar-toggle {
@@ -23,7 +20,7 @@
     padding: 9px 10px !important;
 }
 
-.dropdown-menu{
+.dropdown-menu {
     top: 80px;
     left: auto;
     right: auto;
@@ -31,17 +28,18 @@
 
 }
 
-.dropdown-item{
+.dropdown-item {
     font-size: 14px;
 }
 
 @media (min-width: 768px) {
-    .navbar-nav > li > a {
+    .navbar-nav>li>a {
         /* (80px - line-height of 27px) / 2 = 26.5px */
         padding-top: 26.5px;
         padding-bottom: 26.5px;
         line-height: 27px;
     }
+
     .navbar-brand {
         padding: 0 60px;
         height: 80px;
@@ -62,71 +60,84 @@ section .section-title {
     margin-bottom: 50px;
     text-transform: uppercase;
 }
+
 #footer {
-    background: #022c43!important;
+    background: #053f5e !important;
 }
-#footer h5{
-	padding-left: 10px;
+
+#footer h5 {
+    padding-left: 10px;
     border-left: 3px solid #eeeeee;
     padding-bottom: 6px;
     margin-bottom: 20px;
-    color:#ffffff;
+    color: #ffffff;
 }
+
 #footer a {
     color: #ffffff;
     text-decoration: none !important;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
-#footer ul.social li{
-	padding: 3px 0;
+
+#footer ul.social li {
+    padding: 3px 0;
 }
+
 #footer ul.social li a i {
     margin-right: 5px;
-	font-size:25px;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
+    font-size: 25px;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
 }
+
 #footer ul.social li:hover a i {
-	font-size:30px;
-	margin-top:-10px;
+    font-size: 30px;
+    margin-top: -10px;
 }
+
 #footer ul.social li a,
-#footer ul.quick-links li a{
-	color:#ffffff;
+#footer ul.quick-links li a {
+    color: #ffffff;
 }
-#footer ul.social li a:hover{
-	color:#eeeeee;
+
+#footer ul.social li a:hover {
+    color: #eeeeee;
 }
-#footer ul.quick-links li{
-	padding: 3px 0;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
+
+#footer ul.quick-links li {
+    padding: 3px 0;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
 }
-#footer ul.quick-links li:hover{
-	padding: 3px 0;
-	margin-left:5px;
-	font-weight:700;
+
+#footer ul.quick-links li:hover {
+    padding: 3px 0;
+    margin-left: 5px;
+    font-weight: 700;
 }
-#footer ul.quick-links li a i{
-	margin-right: 5px;
+
+#footer ul.quick-links li a i {
+    margin-right: 5px;
 }
+
 #footer ul.quick-links li:hover a i {
     font-weight: 700;
 }
 
-@media (max-width:767px){
-	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-}
+@media (max-width:767px) {
+    #footer h5 {
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
 }
 
 #navbar {
-  transition: top 0.3s;
-  background-color: rgb(52, 58, 64);opacity: 0.975 !important;
+    transition: top 0.3s;
+    background-color: rgb(52, 58, 64);
+    opacity: 0.975 !important;
 }
