--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,7 @@
-body, html {
+body,
+html {
     height: 100%;
+    width: 100vw;
     margin: 0;
 }
 
@@ -8,7 +10,7 @@ body, html {
     background-image: url('/images/home/Home.jpeg');
     position: relative;
     /* Full height */
-    height:100%;
+    height: 92vh;
     z-index: 0;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -19,76 +21,100 @@ body, html {
 
 }
 
-.parallax_home > div{
+.parallax_home>div {
     color: white;
-    position: absolute;               /* 2 */
+    position: absolute;
+    /* 2 */
     width: 100%;
     height: 50%;
-    top: 80%;                         /* 3 */
+    top: 50%;
+    /* 3 */
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0, 0.45);
-}
-.summary{
-    height:500px;
-    background-color:white;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-.summary > div{
-    padding-top: 100px;
+.summary {
+    /* height: 500px; */
+    background-color: white;
+}
+
+.summary>div {
     text-align: center;
     font-weight: bolder;
 }
 
-.z-index{
+.z-index {
     z-index: 10000;
 }
 
-.big{
+.big {
     font-size: 4rem;
 }
-.home-transparent{
+
+.home-transparent {
     max-height: 40%;
 }
 
-#container-1 > p{
+#container-1>p {
     font-size: small;
     font-weight: lighter;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin-top: 30px;
-    padding-top:10px;
-    line-height:2;
+    padding-top: 10px;
+    line-height: 2;
     text-transform: none;
-    max-width: 50%;
-    margin-right:auto;
-    margin-left: auto;"
+    max-width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+
 }
 
-#container-1 > h1{
+#container-1>h1 {
     font-size: 3rem;
 }
 
-.whoweare{
-    height:550px;
-    background-color:white;
+.whoweare {
+    /* height: 550px; */
+    background-color: white;
 
 
 }
 
-.whoweare > div {
-   padding-top: 130px;
+.whoweare>div {
+    /* padding-top: 130px; */
 }
 
-#container-2 > h1 {
+@media only screen and (min-width:1200px){
+    .description{
+        position: absolute;
+        top:50%;
+        -ms-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+}
+
+#asset{
+    width: 70px;
+    height: 4px;
+    top: 4697px;
+    left: 20px;
+    z-index: 20081;
+    /* background: rgb(35, 32, 34); */
+    border: 3px solid #053f5e;
+}
+
+#container-2>h1 {
     text-transform: none;
     font-weight: lighter;
 }
 
-#container-2 > p{
+#container-2>p {
     font-family: 'Montserrat', sans-serif;
-    margin-top: 40px;
+    /* margin-top: 40px; */
 }
 
 .responsive {
@@ -98,23 +124,23 @@ body, html {
     border-radius: 50%;
 }
 
-.whatwedo{
-    height:550px;
-    background-color:#F4F7FC;
+.whatwedo {
+    /* height: 550px; */
+    background-color: #F4F7FC;
 
 
 }
 
-.whatwedo > div {
-    padding-top: 130px;
+.whatwedo>div {
+    /* padding-top: 130px; */
 }
 
-.whatwethink{
-    height: 550px;
+.whatwethink {
+    /* height: 550px; */
     background-color: #FFFFFF;
 }
 
-.whatwethink > div {
+.whatwethink>div {
     padding-top: 130px;
 }
 
@@ -124,42 +150,50 @@ body, html {
     padding: 10px;
 }
 
-.newsletter{
+.newsletter {
     padding-top: 50px;
 }
 
 @media only screen and (max-width: 720px) {
 
-    h1.big{
+    h1.big {
         font-size: 2.5rem;
     }
-    h1.small{
+
+    h1.small {
         font-size: 0.5rem !important;
     }
-    div#container-1 > h1{
+
+    div#container-1>h1 {
         font-size: 2rem;
     }
-    div.summary{
+
+    div.summary {
         padding-top: 1px;
-        height: 700px;
+        /* height: 700px; */
     }
-    div.content{
-        height: 800px;
+
+    div.content {
+        /* height: 800px; */
     }
-    div.whatwedo{
-        height: 800px;
+
+    div.whatwedo {
+        /* height: 800px; */
     }
 
 }
+
 @media only screen and (max-width: 320px) {
 
     body {
         font-size: 1em;
     }
-    h1.big{
+
+    h1.big {
         font-size: 2.25rem;
     }
-    h1.small{
+
+    h1.small {
         font-size: 0.5rem !important;
     }
 
