--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,9 @@ li {
 }
 
 .img-gallery {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: all .2s ease-in-out;
 }
 
@@ -60,8 +63,9 @@ li {
 }
 
 .img-profile {
-    max-width: 200px;
+    /* max-width: 200px; */
     /* height: 320px; */
+    width: 100%;
     object-fit: cover;
 }
 
@@ -116,8 +120,7 @@ li {
     background-image: url('../images/research/cover.jpeg');
 
     /* Full height */
-    height: 100%;
-    min-height: 720px;
+    height: 92vh;
 
     position: relative;
     /* Create the parallax scrolling effect */
@@ -136,7 +139,7 @@ li {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    background-color: rgba();
+    background-color: rgba(0,0,0, 0.7);
 }
 
 /* 4 */
